Mejoras en la documentación.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,10 +3,11 @@
     Created on : 31/01/2019, 06:30:00 PM
     Author     : Ricardo Presilla.
     Licencia GNU.
+    Ejemplo de Vue.js #19: Componentes con prop y desactivando la herencia del atributo.
 -->
 <html>
     <head>
-        <title>Vue.js</title>
+        <title>Vue.js #19: Componentes con prop y desactivando la herencia del atributo.</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- development version, includes helpful console warnings -->
